<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"

    android:id="@+id/loginlayout"
    android:orientation="vertical"
    android:background="#E7E4E4">

    <android.support.v7.widget.Toolbar
        android:background="#F1E827"
        app:title="UDAAN App"
        app:titleTextColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/FullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:selectAllOnFocus="true"
        android:autofillHints="NAME"
        android:layout_marginTop="50sp"
        android:padding="14sp"/>

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:autofillHints="EMAIL"
        android:padding="14sp"
        android:layout_marginTop="10sp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:id="@+id/login_password"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"/>
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:autofillHints="@string/M"
        android:padding="14sp"
        android:layout_marginTop="10sp"
        />
    <Button
        android:id="@+id/getOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="#000000"
        android:background="#F1E827"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:layout_marginTop="30sp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#444" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:gravity="center"
            android:text="@string/or" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#444" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/termsNcondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By Signing Up You Agree To Our Terms And Conditions."
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="#333333"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            />

        android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>