<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FavoritesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1e827"
            app:title="Favorites"
            app:titleTextColor="@color/cardview_light_background"></android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_green_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/there_are"
                android:textColor="@color/dark_grey_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewNewOfferNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 377 "
                android:textColor="@color/green_text"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_offers_available"
                android:textColor="@color/dark_grey_text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:orientation="vertical"
            android:padding="10dp">

            <ListView
                android:id="@+id/listViewNewOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewShowingStores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="Showing 1 of 1 Stores"
            android:textColor="@color/dark_grey_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewLatestOffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/latest_offers"
            android:textColor="@color/dark_grey_text"
            android:textSize="22sp" />

        <ListView
            android:id="@+id/listViewLatestOffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey" />
    </LinearLayout>

</ScrollView>